add 5 day of js

--- a/day1/main.html
+++ b/day1/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="refresh" content="2; url=demo1.html"> -->
+    <meta http-equiv="refresh" content="3; url=registration.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/css.css">
@@ -10,7 +10,7 @@
 <body>
      <p class="right"><u>welcome to our first page html &#x2112;</u></p>
       <br><br>
-     <div class="middle"><a href="demo1.html"><img src="images/enter.jpg" alt=""></a></div> 
+     <div class="middle"><a href="login.html"><img src="images/enter.jpg" alt=""></a></div> 
 
 </body>
 </html>
