--- a/day1/day5_js/cookies/main.html
+++ b/day1/day5_js/cookies/main.html
@@ -116,7 +116,7 @@
         </div> 
     </div>
      <script src="cookieLibrary.js"></script>
-    <script src="cookie.js"></script>
+    <script src="jsFmain.js"></script>
        
    
 
