--- a/day1/day5_js/cookies/page2.html
+++ b/day1/day5_js/cookies/page2.html
@@ -8,8 +8,13 @@
     *{
         padding: 0;
         margin: 0;
+        height: 800px;
+        background-color: rgba(199, 170, 226, 0.412);
     }
     #genderImg {
+        /* width: 200px; */
+        height: 200px;
+        margin: 20px auto;
         margin-top: 10px;
     }
     #spanName, #spanTimes {
